Changed PyProcess p to ProcessBuilder, .idea files